# oncvpsp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL  Makefile  README.md  SUPPORT  SUPPORT.md  _.config.yml  fortitude.toml  make.inc  mkdocs.yml  pyproject.toml  requirements.txt  set_path
.github/workflows/: cmake-multi-platform.yaml  cmake_ctest.yaml  gh-pages.yml
doc/: coding_standards.md  coding_standards.txt  core_correction.md  core_correction.txt  ghosts.md  ghosts.txt  index.md  libxc_use.md  libxc_use.txt  program_overview.md  program_overview.txt  pwscf_exc.md  pwscf_exc.txt  relativistic.md  relativistic.txt  release_notes.md  users_guide.md  users_guide.txt
scripts/: README  compare.sh  compare_psml.sh  compare_r.sh  extract.old.sh  extract.sh  fldiff.pl  input_text_to_toml.py  multirun_r.sh  replot.sh  run.sh  run_nr.sh  run_r.sh
src/: CMakeLists.txt  Makefile  aeo.f90  check_data.f90  const_basis.f90  constants_m.f90  der2exc.f90  dp3int.f90  dpnint.f90  eresid.f90  exc_libxc.f90  exc_libxc_stub.f90  exc_off_pbe.f  exchdl.f90  excpwca.f90  excpzca.f90  excwig.f90  fphsft.f90  fphsft_r.f90  fpovlp.f90  fpovlp_r.f90  functionals.F90  gg1cc.f90  gibbs.txt  gnu_script.f90  gnu_script_r.f90  gp1cc.f90  gpp1cc.f90  hdf5_utils_m.f90  input_text_m.f90  input_toml_m.f90  ldiracfb.f90  ldiracfs.f90  linout.f90  linout_r.f90  lschfb.f90  lschfs.f90  lschkb.f90  lschpb.f90  lschps.f90  (+67 more)
src/pyoncvpsp/: __init__.py  utils.py
src/pyoncvpsp/cli/: __init__.py  _cli.py  _dat2toml.py  _format_dat.py  _out2json.py  _toml2dat.py
src/pyoncvpsp/io/: __init__.py  _utils.py
src/pyoncvpsp/io/input/: __init__.py  _models.py
src/pyoncvpsp/io/output/: __init__.py  _text.py
src/xmlf90-wxml/: CMakeLists.txt  LICENSE  README  m_wxml_buffer.f90  m_wxml_core.f90  m_wxml_dictionary.f90  m_wxml_elstack.f90  m_wxml_text.f90  makefile  xmlf90_wxml.f90
tests/: CMakeLists.txt  compare.sh  compare_r.sh  conftest.py  extract.sh  multirun.sh  multirun_nr.sh  nested_approx.py  replot.sh  test_refs.py
tests/data/: TEST.sh
tests/refs/: 03_Li.out  07_N.out  07_N_dl.out  08_O.out  14_Si.out  14_Si_UPF.out  14_Si_st.out  17_Cl.out  19_K.out  19_K_st.out  20_Ca.out  22_Ti.out  29_Cu.out  32_Ge.out  34_Se.out  38_Sr_lxc.out  40_Zr.out  52_Te_r.out  56_Ba.out  57_La.out  60_Nd_GHOST.out  73_Ta.out  74_W_r.out  79_Au_lxc.out  79_Au_lxc.plot  80_Hg_r.oncvpsp.psml  80_Hg_r.oncvpsp.psp8  80_Hg_r.oncvpsp.upf  80_Hg_r.out  83_Bi.out
